--- a/DSA/pom.xml
+++ b/DSA/pom.xml
@@ -5,26 +5,21 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version>
+        <version>3.2.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>io.javabrains</groupId>
-    <artifactId>movie-catalog-service</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>DSA</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Microservices-Movie-Catalog-Service</name>
-    <description>Microservices-Movie-Catalog-Service</description>
+    <name>DSA</name>
+    <description>DSA</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
